# OpenGL_Tetrahedron_Optimization

./: .gitignore  CMakeLists.txt  README.md  todo.txt
cmake/: CPM.cmake  global_settings.cmake
res/shaders/: 3d.frag  3d.vert  basic.frag  basic.geom  basic.vert  basic2.geom  color.frag  color.vert  instance.frag  instance.vert  rainbow.frag  rainbow.vert  tetrahedron.frag  tetrahedron.vert  texture.frag  texture_2.vert  texture_2Matrix.vert  texture_rainbow.frag  uniform.frag  uniform.vert
src/: CMakeLists.txt  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture.hpp  main.cpp  pch.h  pch.hpp
